Refactor to a general solution (#65)